Dummy_Package_for_scratch_org/main/default/objects/Selenium_Locator_Reference__c/Selenium_Locator_Reference__c.object-meta.xml
<CustomObject>
    <label>Selenium Locator Reference</label>
    <nameField>
        <displayFormat>SLR-{00000}</displayFormat>
        <label>Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selenium Locator References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>