Dummy_Package_for_scratch_org/main/default/objects/Selenium_Locator_Reference__c/fields/Selenium_Locator__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Locator__c</fullName>
    <label>Selenium Locator</label>
    <referenceTo>Selenium_Locator__c</referenceTo>
    <relationshipLabel>Selenium Locator References</relationshipLabel>
    <relationshipName>Selenium_Locator_References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>