Dummy_Package_for_scratch_org/main/default/objects/Selenium_Locator_Reference__c/fields/Selenium_Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Test_Case__c</fullName>
    <label>Selenium Test Case</label>
    <referenceTo>Selenium_Test_Case__c</referenceTo>
    <relationshipLabel>Selenium Locator References</relationshipLabel>
    <relationshipName>Selenium_Locator_References</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>