Dummy_Package_for_scratch_org/main/default/objects/Selenium_Locator_Reference__c/fields/Selenium_Test_Case_Version__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Test_Case_Version__c</fullName>
    <formula>Selenium_Test_Case__r.Version__c</formula>
    <label>Selenium Test Case Version</label>
    <type>Text</type>
</CustomField>